tests/ui/const-generics/mgca/direct-const-arg-multiple-exprs.stderr
error: direct_const_arg! takes 1 argument
  --> $DIR/direct-const-arg-multiple-exprs.rs:3:45
   |
LL | fn foo<const N: usize, const M: usize>(_: S<core::direct_const_arg!(N, M)>) {}
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

